devops/ckad/services-and-networking/network-policy/db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: api-pod
          namespaceSelector: # AND Condition with pod selector
            matchLabels:
              name: uat
        - namespaceSelector: # OR Condition with pod Selector
            matchLabels:
              name: prod
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.5.10/3
      ports:
        - protocol: TCP
          port: 80
